# external-api-weather-service

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/api/v1/endpoints/: weather.py
src/api/v1/routers/: __init__.py
src/api/v1/schemas/: weather.py
src/api/v1/services/: weather_service.py
src/core/: config.py
